# Ray-Tracing

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
cmake/: dependencies.cmake
config/life/: cornell-box.json  glass.json  mirror-glass.json  mirror.json
config/week/: checker.json  cornell-box.json  cornell-smoke.json  earth.json  light.json  perlin.json  quad.json  two-spheres.json  week.json
config/weekend/: diffuse.json  fov.json  material.json  sky.json  sphere.json  weekend.json
include/: camera.hpp  common.hpp  film.hpp  integrator.hpp  math-utils.hpp  ray.hpp  vector3.hpp
include/accelerator/: aabb.hpp  bvh.hpp  interval.hpp
include/geometry/: base-geometry.hpp  box.hpp  geometry.hpp  interaction.hpp  moving-sphere.hpp  quad.hpp  rotation.hpp  scene.hpp  sphere.hpp  translation.hpp  volume.hpp
include/material/: base-material.hpp  dielectric.hpp  diffuse-light.hpp  isotropic.hpp  lambertian.hpp  material-record.hpp  material.hpp  metal.hpp
include/pdf/: base-pdf.hpp  cosine-pdf.hpp  geometry-pdf.hpp  mixture-pdf.hpp  pdf.hpp  sphere-pdf.hpp
include/texture/: base-texture.hpp  checker-texture.hpp  image-texture.hpp  noise-texture.hpp  solid-color.hpp  texture.hpp
include/utils/: arg-parser.hpp  random-number-generator.hpp  timer.hpp
src/: camera.cpp  film.cpp  integrator.cpp  main.cpp  ray.cpp
src/accelerator/: aabb.cpp  bvh.cpp  interval.cpp
src/geometry/: base-geometry.cpp  box.cpp  moving-sphere.cpp  quad.cpp  rotation.cpp  scene.cpp  sphere.cpp  translation.cpp  volume.cpp
src/material/: base-material.cpp  dielectric.cpp  diffuse-light.cpp  isotropic.cpp  lambertian.cpp  metal.cpp
src/pdf/: cosine-pdf.cpp  geometry-pdf.cpp  mixture-pdf.cpp  sphere-pdf.cpp
src/texture/: base-texture.cpp  checker-texture.cpp  image-texture.cpp  noise-texture.cpp  solid-color.cpp
src/utils/: arg-parser.cpp  random-number-generator.cpp  timer.cpp
